--- a/.github/workflows/make_3gx.yml
+++ b/.github/workflows/make_3gx.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: alphine-latest
+    runs-on: ubuntu-latest
     container: devkitpro/devkitarm
     
     steps:
