--- a/.github/workflows/make_3gx.yml
+++ b/.github/workflows/make_3gx.yml
@@ -7,10 +7,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: devkitpro/devkitarm
+    container: pablomk7/libctrpf:0.8.0
     
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
 
     - name: make
       run: make
