--- a/.github/workflows/make_3gx.yml
+++ b/.github/workflows/make_3gx.yml
@@ -6,17 +6,20 @@ on:
 
 jobs:
   build:
+  
     runs-on: ubuntu-latest
-    container: pablomk7/libctrpf:0.8.0
+    
+    container: 
+      image: pablomk7/libctrpf:0.8.0
     
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
 
-      - name: 作る
-        run: make
-  
-      - name: アップロード
-        uses: actions/upload-artifact@v4
-        with:
-          name: out
-          path: ./
+    - name: 作る
+      run: make
+
+    - name: アップロード
+      uses: actions/upload-artifact@v4
+      with:
+        name: out
+        path: ./
