--- a/.github/workflows/make_3gx.yml
+++ b/.github/workflows/make_3gx.yml
@@ -1,8 +1,8 @@
-name: BUILD 3GX
+name: さんじーえっくすのさくせい
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 jobs:
   build:
 
@@ -12,12 +12,12 @@ jobs:
       image: pablomk7/libctrpf:0.8.0
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       
-    - name: TUKURU
+    - name: つくる
       run: make
       
-    - name: AGERU
+    - name: あげる
       uses: actions/upload-artifact@v4
       with:
         name: out
