--- a/.github/workflows/make_3gx.yml
+++ b/.github/workflows/make_3gx.yml
@@ -2,14 +2,14 @@ name: さんじーえっくすのさくせい
 
 on:
   push:
-    branches: [ test ]
+    branches: [ no_use_ctrpf ]
 jobs:
   build:
 
     runs-on: ubuntu-latest
     
     container:
-      image: pablomk7/libctrpf:0.8.0
+      image: devkitpro/devkitarm
 
     steps:
     - uses: actions/checkout@v4
