--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,6 @@
         "typeinfo": "cpp",
         "stdio.h": "c",
         "types.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
