--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,5 @@
         "stdio.h": "c",
         "types.h": "c"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "enabled"
 }
